# solvers

./: CMakeLists.txt
python/: plot.py  plot_error.py  smooth_hat.py
src/: defs.hpp  emac24.cpp  emac24.hpp  field.hpp  mac22.cpp  mac22.hpp  main.cpp  rk48.cpp  rk48.hpp  solver.hpp
src/test/: deriv-mac22.cpp
